connected with firebase database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">QuotesApp</string>
+    <string name="app_name">Цитатник</string>
+    <string name="data_saved">Успешно сохранено</string>
 </resources>
