fixed changing UI on selecting categories in API < 23

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Цитатник</string>
+    <string name="app_name">Цитафоры</string>
     <string name="data_saved">Успешно сохранено</string>
     <string name="action_settings">Сохранить</string>
     <string name="category">Категории</string>
