--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="subcategories">Подкатегории</string>
     <string name="choose_category">Выберите категорию</string>
     <string name="choose_subcategory">Выберите подкатегорию</string>
+    <string name="error_msg">Ошибка загрузки данных</string>
+    <string name="choose_at_least_subcategory">Выберите хотя бы одну подкатегорию</string>
+    <string name="choose_at_least_one_category">Выберите хотя бы одну категорию</string>
 </resources>
